2013-11-11  Jan Kratochvil  <jan.kratochvil@redhat.com>

	[BZ #387]
	* elf/dl-object.c (_dl_new_object): Initialize L_NAME from NEWNAME if
	it is empty.

2013-11-11  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

        * benchtests/Makefile: Add bench-strtod.
        * benchtests/bench-strtod.c: New file: strtod benchtest

2013-11-11  Andreas Schwab  <schwab@suse.de>

	[BZ #16153]
	* nscd/nscd_getserv_r.c (__nscd_getservbyport_r): Don't include
	terminating NUL in key length.

2013-11-08  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/bits/libc-vdso.h (VDSO_IFUNC_RET):
	Add artificial ODP entry for vDSO symbol for PPC64.
	* sysdeps/unix/sysv/linux/powerpc/gettimeofday.c: Adjust includes.
	* sysdeps/unix/sysv/linux/powerpc/time.c: Likewise.

2013-11-07  Ondřej Bílka  <neleai@seznam.cz>

	[BZ #15374]
	* nss/getent.c (services_keys): Recognize services starting with digit.

2013-11-06  David S. Miller  <davem@davemloft.net>

	[BZ #15985]
	* sysdeps/sparc/sparc32/fpu/s_fdim.S (__fdim): Do not use fnegd
	on pre-v9 cpus, use a fnegs+fmovs sequence instead.

2013-11-06  Will Newton  <will.newton@linaro.org>

	* manual/memory.texi (Malloc Examples): Remove register
	keyword from examples.

2013-11-04  Chris Leonard  <cjl@sugarlabs.org>

	* locale/iso-639.def: Correct Walaita (wal) and add Unami Delaware (unm).

2013-11-04  Joseph Myers  <joseph@codesourcery.com>

	* include/stdc-predef.h [__GCC_IEC_559] (__STDC_IEC_559__): Define
	depending on [__GCC_IEC_559 > 0].
	[__GCC_IEC_559_COMPLEX] (__STDC_IEC_559_COMPLEX__): Define
	depending on [__GCC_IEC_559_COMPLEX > 0].

2013-11-03  Chris Leonard  <cjl@sugarlabs.org>

	* locale/iso-639.def: Add Quechua, Southern (quz) and Silesian (szl)
	to iso-639.def.

2013-11-03  Ondřej Bílka  <neleai@seznam.cz>

	* elf/rtld.c: Remove unused NONTLS_INIT_TP.

2013-11-01  Ondřej Bílka  <neleai@seznam.cz>

	[BZ #16112]
	* malloc/malloc (malloc_info): Do not handle first bin as
	special case.
